[package]
name = "wheel-flat"
version = "0.1.0"
edition = "2024"
authors = ["Amen-under-Wu <yh_fengovsky@qq.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
    "console",
    "Window",
    "Document",
    "Performance",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlUniformLocation",
]
